src/dartcv/core/types.h

typedef unsigned short ushort;
// Wrapper for an individual cv::Point
typedef struct CvPoint {
    int x;
    int y;
} CvPoint;
// Wrapper for an individual cv::Point2f
typedef struct CvPoint2f {
    float x;
    float y;
} CvPoint2f;
typedef struct CvPoint2d {
    double x;
    double y;
} CvPoint2d;
typedef struct CvPoint3f {
    float x;
    float y;
    float z;
} CvPoint3f;
typedef struct CvPoint3i {
    int x;
    int y;
    int z;
} CvPoint3i;
// Wrapper for an individual cv::Rect
typedef struct CvRect {
    int x;
    int y;
    int width;
    int height;
} CvRect;
typedef struct CvRect2f {
    float x;
    float y;
    float width;
    float height;
} CvRect2f;
// Wrapper for an individual cv::Size
typedef struct CvSize {
    int width;
    int height;
} CvSize;
typedef struct CvSize2f {
    float width;
    float height;
} CvSize2f;
// Wrapper for a individual cv::KeyPoint
typedef struct KeyPoint {
    float x;
    float y;
    float size;
    float angle;
    float response;
    int octave;
    int classID;
} KeyPoint;
// Wrapper for an individual cv::DMatch
typedef struct DMatch {
    int queryIdx;
    int trainIdx;
    int imgIdx;
    float distance;
} DMatch;
// Wrapper for an individual cv::Moment
typedef struct Moment {
    double m00;
    double m10;
    double m01;
    double m20;
    double m11;
    double m02;
    double m30;
    double m21;
    double m12;
    double m03;

    double mu20;
    double mu11;
    double mu02;
    double mu30;
    double mu21;
    double mu12;
    double mu03;

    double nu20;
    double nu11;
    double nu02;
    double nu30;
    double nu21;
    double nu12;
    double nu03;
} Moment;
typedef struct CvStatus {
    int code;
    char *msg;
    char *err;
    char *func;
    char *file;
    int line;
} CvStatus;
typedef union Cv32suf_C {
    int i;
    unsigned u;
    float f;
} Cv32suf_C;
typedef union Cv16suf_C {
    short i;
    ushort u;
} Cv16suf_C;
typedef struct MatStep {
    size_t p[3];
} MatStep;
typedef void (*CvCallback_0)();
typedef void (*CvCallback_1)(void *);
typedef void (*CvCallback_2)(void *, void *);
typedef void (*CvCallback_3)(void *, void *, void *);
typedef void (*CvCallback_4)(void *, void *, void *, void *);
typedef void (*CvCallback_5)(void *, void *, void *, void *, void *);
typedef void (*CvCallback_6)(void *, void *, void *, void *, void *, void *);
typedef void (*CvCallback_7)(void *, void *, void *, void *, void *, void *, void *);
typedef void (*CvCallback_8)(void *, void *, void *, void *, void *, void *, void *, void *);
typedef void (*CvCallback_9)(void *, void *, void *, void *, void *, void *, void *, void *, void *);
// Contour is alias for Points
typedef VecPoint Contour;
typedef VecPoint2f Contour2f;
typedef VecPoint3f Contour3f;
typedef VecVecPoint Contours;
typedef VecVecPoint2f Contours2f;
typedef VecVecPoint3f Contours3f;
typedef Mat MatIn;
typedef Mat MatOut;
typedef Mat MatInOut;