packages/dartcv/lib/src/g/types.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

typedef Contour = VecPoint;
typedef Contour2f = VecPoint2f;
typedef Contour3f = VecPoint3f;
typedef Contours = VecVecPoint;
typedef Contours2f = VecVecPoint2f;
typedef Contours3f = VecVecPoint3f;

final class Cv16suf_C extends ffi.Union {
  @ffi.Short()
  external int i;

  @ushort()
  external int u;
}

final class Cv32suf_C extends ffi.Union {
  @ffi.Int()
  external int i;

  @ffi.UnsignedInt()
  external int u;

  @ffi.Float()
  external double f;
}

typedef CvCallback_0 = ffi.Pointer<ffi.NativeFunction<CvCallback_0Function>>;
typedef CvCallback_0Function = ffi.Void Function();
typedef DartCvCallback_0Function = void Function();
typedef CvCallback_1 = ffi.Pointer<ffi.NativeFunction<CvCallback_1Function>>;
typedef CvCallback_1Function = ffi.Void Function(ffi.Pointer<ffi.Void>);
typedef DartCvCallback_1Function = void Function(ffi.Pointer<ffi.Void>);
typedef CvCallback_2 = ffi.Pointer<ffi.NativeFunction<CvCallback_2Function>>;
typedef CvCallback_2Function = ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>);
typedef DartCvCallback_2Function = void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>);
typedef CvCallback_3 = ffi.Pointer<ffi.NativeFunction<CvCallback_3Function>>;
typedef CvCallback_3Function =
    ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>);
typedef DartCvCallback_3Function =
    void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>);
typedef CvCallback_4 = ffi.Pointer<ffi.NativeFunction<CvCallback_4Function>>;
typedef CvCallback_4Function =
    ffi.Void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );
typedef DartCvCallback_4Function =
    void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>);
typedef CvCallback_5 = ffi.Pointer<ffi.NativeFunction<CvCallback_5Function>>;
typedef CvCallback_5Function =
    ffi.Void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );
typedef DartCvCallback_5Function =
    void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );
typedef CvCallback_6 = ffi.Pointer<ffi.NativeFunction<CvCallback_6Function>>;
typedef CvCallback_6Function =
    ffi.Void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );
typedef DartCvCallback_6Function =
    void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );
typedef CvCallback_7 = ffi.Pointer<ffi.NativeFunction<CvCallback_7Function>>;
typedef CvCallback_7Function =
    ffi.Void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );
typedef DartCvCallback_7Function =
    void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );
typedef CvCallback_8 = ffi.Pointer<ffi.NativeFunction<CvCallback_8Function>>;
typedef CvCallback_8Function =
    ffi.Void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );
typedef DartCvCallback_8Function =
    void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );
typedef CvCallback_9 = ffi.Pointer<ffi.NativeFunction<CvCallback_9Function>>;
typedef CvCallback_9Function =
    ffi.Void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );
typedef DartCvCallback_9Function =
    void Function(
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
      ffi.Pointer<ffi.Void>,
    );

final class CvPoint extends ffi.Struct {
  @ffi.Int()
  external int x;

  @ffi.Int()
  external int y;

  static ffi.Pointer<CvPoint> $allocate(
    ffi.Allocator $allocator, {
    required int x,
    required int y,
  }) => $allocator<CvPoint>()
    ..ref.x = x
    ..ref.y = y;
}

final class CvPoint2d extends ffi.Struct {
  @ffi.Double()
  external double x;

  @ffi.Double()
  external double y;

  static ffi.Pointer<CvPoint2d> $allocate(
    ffi.Allocator $allocator, {
    required double x,
    required double y,
  }) => $allocator<CvPoint2d>()
    ..ref.x = x
    ..ref.y = y;
}

final class CvPoint2f extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  static ffi.Pointer<CvPoint2f> $allocate(
    ffi.Allocator $allocator, {
    required double x,
    required double y,
  }) => $allocator<CvPoint2f>()
    ..ref.x = x
    ..ref.y = y;
}

final class CvPoint3f extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;

  static ffi.Pointer<CvPoint3f> $allocate(
    ffi.Allocator $allocator, {
    required double x,
    required double y,
    required double z,
  }) => $allocator<CvPoint3f>()
    ..ref.x = x
    ..ref.y = y
    ..ref.z = z;
}

final class CvPoint3i extends ffi.Struct {
  @ffi.Int()
  external int x;

  @ffi.Int()
  external int y;

  @ffi.Int()
  external int z;

  static ffi.Pointer<CvPoint3i> $allocate(
    ffi.Allocator $allocator, {
    required int x,
    required int y,
    required int z,
  }) => $allocator<CvPoint3i>()
    ..ref.x = x
    ..ref.y = y
    ..ref.z = z;
}

final class CvRect extends ffi.Struct {
  @ffi.Int()
  external int x;

  @ffi.Int()
  external int y;

  @ffi.Int()
  external int width;

  @ffi.Int()
  external int height;

  static ffi.Pointer<CvRect> $allocate(
    ffi.Allocator $allocator, {
    required int x,
    required int y,
    required int width,
    required int height,
  }) => $allocator<CvRect>()
    ..ref.x = x
    ..ref.y = y
    ..ref.width = width
    ..ref.height = height;
}

final class CvRect2f extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double width;

  @ffi.Float()
  external double height;

  static ffi.Pointer<CvRect2f> $allocate(
    ffi.Allocator $allocator, {
    required double x,
    required double y,
    required double width,
    required double height,
  }) => $allocator<CvRect2f>()
    ..ref.x = x
    ..ref.y = y
    ..ref.width = width
    ..ref.height = height;
}

final class CvSize extends ffi.Struct {
  @ffi.Int()
  external int width;

  @ffi.Int()
  external int height;

  static ffi.Pointer<CvSize> $allocate(
    ffi.Allocator $allocator, {
    required int width,
    required int height,
  }) => $allocator<CvSize>()
    ..ref.width = width
    ..ref.height = height;
}

final class CvSize2f extends ffi.Struct {
  @ffi.Float()
  external double width;

  @ffi.Float()
  external double height;

  static ffi.Pointer<CvSize2f> $allocate(
    ffi.Allocator $allocator, {
    required double width,
    required double height,
  }) => $allocator<CvSize2f>()
    ..ref.width = width
    ..ref.height = height;
}

final class CvStatus extends ffi.Struct {
  @ffi.Int()
  external int code;

  external ffi.Pointer<ffi.Char> msg;

  external ffi.Pointer<ffi.Char> err;

  external ffi.Pointer<ffi.Char> func;

  external ffi.Pointer<ffi.Char> file;

  @ffi.Int()
  external int line;

  static ffi.Pointer<CvStatus> $allocate(
    ffi.Allocator $allocator, {
    required int code,
    required ffi.Pointer<ffi.Char> msg,
    required ffi.Pointer<ffi.Char> err,
    required ffi.Pointer<ffi.Char> func,
    required ffi.Pointer<ffi.Char> file,
    required int line,
  }) => $allocator<CvStatus>()
    ..ref.code = code
    ..ref.msg = msg
    ..ref.err = err
    ..ref.func = func
    ..ref.file = file
    ..ref.line = line;
}

final class DMatch extends ffi.Struct {
  @ffi.Int()
  external int queryIdx;

  @ffi.Int()
  external int trainIdx;

  @ffi.Int()
  external int imgIdx;

  @ffi.Float()
  external double distance;

  static ffi.Pointer<DMatch> $allocate(
    ffi.Allocator $allocator, {
    required int queryIdx,
    required int trainIdx,
    required int imgIdx,
    required double distance,
  }) => $allocator<DMatch>()
    ..ref.queryIdx = queryIdx
    ..ref.trainIdx = trainIdx
    ..ref.imgIdx = imgIdx
    ..ref.distance = distance;
}

final class InputOutputArray extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;

  static ffi.Pointer<InputOutputArray> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Void> ptr,
  }) => $allocator<InputOutputArray>()..ref.ptr = ptr;
}

typedef InputOutputArrayPtr = ffi.Pointer<InputOutputArray>;

final class KeyPoint extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double size;

  @ffi.Float()
  external double angle;

  @ffi.Float()
  external double response;

  @ffi.Int()
  external int octave;

  @ffi.Int()
  external int classID;

  static ffi.Pointer<KeyPoint> $allocate(
    ffi.Allocator $allocator, {
    required double x,
    required double y,
    required double size,
    required double angle,
    required double response,
    required int octave,
    required int classID,
  }) => $allocator<KeyPoint>()
    ..ref.x = x
    ..ref.y = y
    ..ref.size = size
    ..ref.angle = angle
    ..ref.response = response
    ..ref.octave = octave
    ..ref.classID = classID;
}

final class Mat extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;

  static ffi.Pointer<Mat> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Void> ptr,
  }) => $allocator<Mat>()..ref.ptr = ptr;
}

typedef MatIn = Mat;
typedef MatInOut = Mat;
typedef MatOut = Mat;
typedef MatPtr = ffi.Pointer<Mat>;

final class MatStep extends ffi.Struct {
  @ffi.Array.multi([3])
  external ffi.Array<ffi.Size> p;
}

final class Moment extends ffi.Struct {
  @ffi.Double()
  external double m00;

  @ffi.Double()
  external double m10;

  @ffi.Double()
  external double m01;

  @ffi.Double()
  external double m20;

  @ffi.Double()
  external double m11;

  @ffi.Double()
  external double m02;

  @ffi.Double()
  external double m30;

  @ffi.Double()
  external double m21;

  @ffi.Double()
  external double m12;

  @ffi.Double()
  external double m03;

  @ffi.Double()
  external double mu20;

  @ffi.Double()
  external double mu11;

  @ffi.Double()
  external double mu02;

  @ffi.Double()
  external double mu30;

  @ffi.Double()
  external double mu21;
